# OpenDCC

cmake/macros/: VsStudioUtils.cmake
i18n/: i18n.en.ts
src/lib/opendcc/app/: CMakeLists.txt
src/python/opendcc/: dll_path_fix.py
